daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N23_bad_aead_tag/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a763658407f9622201145df752050dcc8c87065e30ad9be7502fe616f826c7047a5d4628402d9c92acd694a5a7eba3fe996ddeb71238decc21effe0e4a0e56feff441ea24
